--- a/HTML5-CSS3-Guanabara/exercicios/ex022/fundo006.html
+++ b/HTML5-CSS3-Guanabara/exercicios/ex022/fundo006.html
@@ -8,11 +8,18 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center  top;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: cover;background-attachment: fixed; */
+
+            /* Shorthand Background 
+            color > image > position > repeat > [size] > attachment*/
+
+            /* Amigo no comentário ajudou tem que ser color > image > position > / > size > repeat > attachment*/
+            background: black url(imagens/wallpaper002.jpg) center center/cover no-repeat fixed;
+
         }
 
         main{
@@ -28,7 +35,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae vero earum voluptatum quos labore necessitatibus veniam beatae porro voluptates. Repellendus iste asperiores itaque ipsa. Quaerat iste nesciunt ratione sint laudantium necessitatibus quisquam incidunt soluta omnis ipsa iusto optio impedit expedita corporis doloribus aut voluptatibus, natus alias non molestias? Vel sed illo inventore ipsam rerum nulla nihil nesciunt aut consequatur illum officiis, doloribus accusamus velit cum ab itaque quo, numquam modi iusto consectetur aperiam. Aut nihil voluptas, architecto est, quae facere quibusdam vel explicabo quas asperiores similique saepe quidem expedita unde nam velit quaerat laboriosam. Repellat ipsum accusamus iste quo blanditiis.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae vero earum voluptatum quos labore necessitatibus veniam beatae porro voluptates. Repellendus iste asperiores itaque ipsa. Quaerat iste nesciunt ratione sint laudantium necessitatibus quisquam incidunt soluta omnis ipsa iusto optio impedit expedita corporis doloribus aut voluptatibus, natus alias non molestias? Vel sed illo inventore ipsam rerum nulla nihil nesciunt aut consequatur illum officiis, doloribus accusamus velit cum ab itaque quo, numquam modi iusto consectetur aperiam. Aut nihil voluptas, architecto est, quae facere quibusdam vel explicabo quas asperiores similique saepe quidem expedita unde nam velit quaerat laboriosam. Repellat ipsum accusamus iste quo blanditiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto excepturi expedita odio quia possimus veniam numquam iste molestiae ullam sequi temporibus corporis, minima iure itaque optio placeat impedit dolores, animi laboriosam unde tempora deserunt quae voluptatem amet! Impedit nemo ab corporis non a vero illum aspernatur molestiae reprehenderit asperiores. Sint ex et a illum quaerat, unde numquam. Impedit natus quod sunt iusto facilis quas pariatur id modi! Eius animi id consectetur est blanditiis, at quo delectus beatae tempora hic aliquid iure nihil, eos rem voluptas cumque, vero dolorem accusamus nisi! Cupiditate, est! Aperiam expedita incidunt id asperiores sapiente error impedit, ullam omnis facilis quis ipsam saepe cupiditate fugit porro, corrupti debitis inventore rem! Eos in earum totam iste nulla, voluptate fuga accusamus doloribus quas sapiente quis incidunt cumque harum, voluptatum qui ex illo ut! Quaerat quae obcaecati doloremque quo. Assumenda voluptate recusandae delectus, officiis architecto animi ipsam? Vitae modi tempora corporis quo voluptatum odio nisi repudiandae placeat culpa adipisci, impedit eum laborum ullam neque accusantium. Animi in nostrum ea veritatis quod, voluptates accusantium nihil? Aliquam nulla neque, sit quo dicta amet consequuntur accusamus. Exercitationem minus pariatur vitae mollitia? Voluptatibus, aliquam animi iste sit perferendis sapiente quisquam earum sed error nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque unde soluta ducimus cum facilis itaque quas? Amet fugiat nam ut dolores incidunt velit voluptatum illo esse? Atque, ullam! Suscipit voluptatum reiciendis eos eius officiis optio. Corporis, labore tempore. Dignissimos, porro. Culpa eum magni veniam necessitatibus earum reiciendis laudantium ipsam maiores cumque eaque eveniet obcaecati eos nostrum, voluptatem quam tempora at? Illo corporis ab hic maxime, facere odio pariatur earum expedita? Deserunt quaerat, eius error vero voluptates quibusdam dolorem quia eos distinctio fuga adipisci odit excepturi perferendis magni nisi vel iusto ad exercitationem repellat corporis numquam quas fugiat? Odit mollitia distinctio autem molestias numquam itaque maiores officia facere id, quibusdam vel, eaque dolorem consectetur, dolorum nostrum. Cum excepturi saepe in esse porro. Vel nemo autem, quidem laboriosam explicabo quam repellat magni fuga adipisci inventore accusantium, architecto esse, nam quod illum nisi incidunt deleniti beatae vitae placeat voluptas. Tempora consequatur, omnis incidunt laudantium corrupti aspernatur quaerat dolore, rerum, dignissimos quos autem doloremque earum et obcaecati non possimus eaque molestiae fugiat eveniet. Tempora voluptate dolorem aut sed? Quibusdam, praesentium corrupti soluta quasi voluptatem commodi dolor tenetur perferendis cumque aperiam expedita at quisquam voluptatum architecto quae necessitatibus, sit quo voluptate suscipit? Iure, illum beatae!</p>
     </main>
 </body>
 </html>
