--- a/JavaScript-Guanabara/aula06/ex004.html
+++ b/JavaScript-Guanabara/aula06/ex004.html
@@ -14,9 +14,9 @@
 <body>
     <script>
         var nome = window.prompt('Qual é seu nome?')
-        document.writeln(`Olá, <strong>${nome}</strong>! Seu nome tem ${nome.length} letras.<br>`)
+        document.write(`Olá, <strong>${nome}</strong>! Seu nome tem ${nome.length} letras.<br>`)
         document.write(`Seu nome em maiúscula é ${nome.toUpperCase()}<br>`)
-        document.write(`Seu nome em mainúscula é ${nome.toLowerCase()}`)
+        document.write(`Seu nome em minúscula é ${nome.toLowerCase()}`)
     </script>
 </body>
 </html>
