Criação de Alura Tracker

--- a/JavaScript-Guanabara/aula011/ex010.html
+++ b/JavaScript-Guanabara/aula011/ex010.html
@@ -49,7 +49,7 @@
         function calcular() {
             var txtv = document.querySelector('input#txtvel')
             var res = document.querySelector('div#res')
-            var vel = Number(txtv.value)
+            var vel = Number(txtv.value) //value é para pegar o resultado da caixa
             res.innerHTML = `<p>Sua velocidade atual é de <strong>${vel}Km/h</strong></p>`
             if (vel > 60) {
                 res.innerHTML += `<p>Você está <strong>MULTADO</strong> por excesso de velocidade.</p>`
