--- a/JavaScript-Guanabara/aula06/ex002.html
+++ b/JavaScript-Guanabara/aula06/ex002.html
@@ -22,7 +22,7 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição.</p>
     <script>
-        window.prompt('Qual é seu nome?');//Vai perguntar o nome...
+        var nome = window.prompt('Qual é seu nome?');//Vai perguntar o nome...
         window.alert('É um grande prazer te conhecer, ' + nome + '!') //concatenação
     </script>
 </body>
